attempt to fix alignment of search button in post filter component

--- a/assets-src/styles/sass/30-base/_hide-and-show.scss
+++ b/assets-src/styles/sass/30-base/_hide-and-show.scss
@@ -81,11 +81,11 @@
  */
 //[hidden] + *,
 //.hidden + *,
-//.visuallyhidden + * {
-//
-//	margin-top: 0 !important;
-//
-//}
+.visuallyhidden + * {
+
+	margin-top: 0 !important;
+
+}
 
 br {
 
